--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>첫번째 프로젝트다아아아아아</h1>
-    <p>예에에에에에에에에</p>
-    <h2>머ㅗㅁㄴ옴ㄴ옴ㄴ옴ㄴ오</h2>
+    <h1>숫자 맞추기 게임!</h1>
+    <div id = "result-button">결과가 나온다</div>
+    <input type="number" id = "user-input">
+    <button id = "play-button">Go!</button> <!--need eventListener-->
+
+    <script src="main.js"></script>
   </body>
 </html>
